# profit-layer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_DIAGNOSIS.md  FIX_VALIDATION_REPORT.md  LICENSE  NEXT_STEPS.md  OPEN_SOURCE_CHECKLIST.md  OPS_ACCESS_GUIDE.md  PROJECT_INSPECTION_REPORT.md  README.md  README.zh-CN.md  SECURITY.md  SECURITY_INCIDENT_RESPONSE.md  SYSTEM_STATUS_REPORT.md  check_balance.py  docker-compose.prod.yml  docker-compose.yml  install.sh  nginx-updates.conf  ops.html  package.json  pnpm-lock.yaml  rebuild.sh  start-ops-console.sh
ai-engine/: Dockerfile  pyproject.toml
ai-engine/config/: trading_agents.yaml
ai-engine/src/agent/: memory.py  multi_agent.py  think_loop.py
ai-engine/src/api/: server.py
ai-engine/src/models/: ai_advisor.py  alpha_scanner.py  friction_calculator.py  il_calculator.py  liquidation_monitor.py  local_llm.py  market_sentiment.py  realtime_feeds.py  reward_token_analyzer.py  risk_scorer.py  rl_optimizer.py  transformer_predictor.py  yield_predictor.py
ai-engine/src/risk/: advanced_risk.py  anomaly_detector.py  exposure_manager.py  stop_loss.py  take_profit.py
ai-engine/src/strategies/: backtester.py  concentrated_liquidity.py  cross_dex_arb.py  funding_rate_arb.py  lending_arb.py  optimizer.py  perp_dex_lp.py  points_farming.py  restaking.py  rwa_yield.py  staking.py  vault_strategy.py  yield_farming.py
ai-engine/src/trading_agents/: __init__.py  api.py  core.py
ai-engine/src/workers/: risk_worker.py  (+1 more)
ai-engine/tests/: test_friction_calculator.py
(+67 files in other folders)
